--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
   <link rel="stylesheet" href="style.css">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@800&family=Cinzel:wght@700&display=swap" rel="stylesheet">
 
-  <!-- Icono personalizado para PWA -->
+  <!-- Icono personalizado -->
   <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 192 192'><rect width='192' height='192' rx='30' fill='%23d4af37'/><text x='96' y='118' text-anchor='middle' font-family='Cinzel, serif' font-weight='700' font-size='80' fill='%238e24aa'>MZ</text></svg>">
 
-  <!-- Manifest para PWA -->
-  <link rel="manifest" href="manifest.json">
+  <!-- Manifest CORRECTO para /recordatorio/ -->
+  <link rel="manifest" href="/recordatorio/manifest.json">
 </head>
 <body>
 
